--- a/GravSim-frontend/src/App.css
+++ b/GravSim-frontend/src/App.css
@@ -1,4 +1,8 @@
 .App {
+  background-color: #2b4162;
+  background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
+  height: 100vh;
+  padding: 20px;
   text-align: center;
 }
 
@@ -36,3 +40,4 @@
     transform: rotate(360deg);
   }
 }
+
