--- a/GravSim-frontend/src/Grid.css
+++ b/GravSim-frontend/src/Grid.css
@@ -1,12 +1,14 @@
 .grid {
     display: grid;
-    background-color: rgb(75, 75, 75);
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    background-color: rgb(58, 58, 58);
+    top: 50%;
+    left: 33%;
+    width: 1200px;
+    height: 900px;
     position: absolute;
-    border: 3px solid gray;
+    border: 3px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    transform: translate(-50%, -50%);
 
 }
 
