--- a/GravSim-frontend/src/Grid.css
+++ b/GravSim-frontend/src/Grid.css
@@ -3,8 +3,8 @@
     background-color: rgb(58, 58, 58);
     top: 50%;
     left: 33%;
-    width: 1200px;
-    height: 900px;
+    width: 60%;
+    height: 90%;
     position: absolute;
     border: 3px solid rgb(0, 0, 0);
     border-radius: 10px;
@@ -13,10 +13,11 @@
 }
 
 .point {
-    width: 15px;
-    height: 15px;
-    background-color: red;
+    width: 10px;
+    height: 10px;
+    background-color: rgb(202, 3, 3);
     position: absolute;
     border-radius: 50%;
+    transform: translate(-50%, -50%);
     
 }
