--- a/GravSim-frontend/src/Grid.css
+++ b/GravSim-frontend/src/Grid.css
@@ -21,3 +21,21 @@
     transform: translate(-50%, -50%);
     
 }
+
+.arrow {
+    width: 3px;
+    height: 20px;
+    background: #ffffff;
+    position: relative;
+    transform: translate(-20px, -20px);
+    transform-origin: 0% 0%;
+  }
+
+  .arrow:before {
+    content: '';
+    border-style: solid;
+    border-width: 0 10px 10px 10px;
+    border-color: transparent transparent #ffffff transparent;
+    position: absolute;
+    transform: translate(-50%, -100%);
+  }
