--- a/GravSim-frontend/src/Grid.css
+++ b/GravSim-frontend/src/Grid.css
@@ -2,9 +2,9 @@
     display: grid;
     background-color: rgb(58, 58, 58);
     top: 50%;
-    left: 33%;
-    width: 60%;
-    height: 90%;
+    left: 30%;
+    width: min(60vw, 95vh);
+    height: min(60vw, 95vh);
     position: absolute;
     border: 3px solid rgb(0, 0, 0);
     border-radius: 10px;
